# json_schema

./: CMakeLists.txt  Makefile  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: README.md
scripts/: bootstrap-template.py
src/: json_schema_extension.cpp
src/include/: json_schema_extension.hpp
test/: README.md
test/sql/: json_schema.test
